data/derived/fa15/progs/unify/prog1855.ml.out
Characters 100-116:
  if (x1+x2+carry)/10 then (1, (x1+x2+carry)mod 10::accList) 
     ^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         bool
